@@ -64,6 +64,11 @@ type Dict struct {
 	value []Node
 }
 
+// NewDict creates a new dict with provided nodes.
+func NewDict(nodes []Node) *Dict {
+	return &Dict{nodes}
+}
+
 // Find takes a string which is a key and try to find the elements in the associated K/V.
 func (d *Dict) Find(key string) (Node, bool) {
 	for _, i := range d.value {
@@ -114,6 +119,11 @@ func (d *Dict) Hash() []byte {
 type Key struct {
 	name  string
 	value Node
+}
+
+// NewKey creates a new key with provided name node pair.
+func NewKey(name string, val Node) *Key {
+	return &Key{name, val}
 }
 
 func (k *Key) String() string {
@@ -229,6 +239,11 @@ type StrVal struct {
 	value string
 }
 
+// NewStrVal creates a new string value node with provided value.
+func NewStrVal(val string) *StrVal {
+	return &StrVal{val}
+}
+
 // Find receive a key and return false since the node is not a List or Dict.
 func (s *StrVal) Find(key string) (Node, bool) {
 	return nil, false
@@ -259,6 +274,11 @@ type IntVal struct {
 	value int
 }
 
+// NewIntVal creates a new int value node with provided value.
+func NewIntVal(val int) *IntVal {
+	return &IntVal{val}
+}
+
 // Find receive a key and return false since the node is not a List or Dict.
 func (s *IntVal) Find(key string) (Node, bool) {
 	return nil, false
@@ -287,6 +307,11 @@ func (s *IntVal) Hash() []byte {
 // UIntVal represents an int.
 type UIntVal struct {
 	value uint64
+}
+
+// NewUIntVal creates a new uint value node with provided value.
+func NewUIntVal(val uint64) *UIntVal {
+	return &UIntVal{val}
 }
 
 // Find receive a key and return false since the node is not a List or Dict.
@@ -320,6 +345,11 @@ type FloatVal struct {
 	value float64
 }
 
+// NewFloatVal creates a new float value node with provided value.
+func NewFloatVal(val float64) *FloatVal {
+	return &FloatVal{val}
+}
+
 // Find receive a key and return false since the node is not a List or Dict.
 func (s *FloatVal) Find(key string) (Node, bool) {
 	return nil, false
@@ -348,6 +378,11 @@ func (s *FloatVal) Hash() []byte {
 // BoolVal represents a boolean in our Tree.
 type BoolVal struct {
 	value bool
+}
+
+// NewBoolVal creates a new bool value node with provided value.
+func NewBoolVal(val bool) *BoolVal {
+	return &BoolVal{val}
 }
 
 // Find receive a key and return false since the node is not a List or Dict.
